Fix: hover border for SDG spilling over edge

--- a/app/javascript/app/components/sdg-card/sdg-card-styles.scss
+++ b/app/javascript/app/components/sdg-card/sdg-card-styles.scss
@@ -13,7 +13,6 @@ $animation-delay-time: 0.1s;
     cursor: pointer;
 
     &:hover {
-      border-color: transparent;
       transition: background-color $animation-time linear;
 
       > .title,
